# llama.cpp_OHOS

./: .gitignore  .gitmodules  README.en.md  README.md  README_LLAMACPP.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/AsyncCallback/: AsyncCallback.cpp  AsyncCallback.h
entry/src/main/cpp/AsyncPromise/: AsyncPromise.cpp  AsyncPromise.h
entry/src/main/cpp/LibUvCase/: LibUvCase.cpp  LibUvCase.h
entry/src/main/cpp/LlamaCppInterface/: LlamaCppInterface.cpp  LlamaCppInterface.h  LlamaCppNapi.cpp  LlamaCppNapi.h
entry/src/main/cpp/SyncCallback/: SyncCallback.cpp  SyncCallback.h
entry/src/main/cpp/ThreadSafeCase/: ThreadSafeCase.cpp  ThreadSafeCase.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
entry/src/main/ets/pages/: Index.ets  LlamaChatPage.ets  SubMainThreadCom.ets  SyncAndAsyncWork.ets
entry/src/main/ets/view/: TitleComponent.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/rawfile/: AsyncCallback.txt  AsyncPromise.txt  SyncCallback.txt
entry/src/main/resources/zh_CN/element/: string.json
